--- a/diploma/literatura.bib
+++ b/diploma/literatura.bib
@@ -1,4 +1,102 @@
 # Encoding: UTF-8
+
+@book{functional_parallel_graph_rewriting,
+  title     = {Functional Programming and Parallel Graph Rewriting},
+  author    = {Plasmeijer, M. and Van Eekelen, M.},
+  url       = {https://wiki.clean.cs.ru.nl/Functional_Programming_and_Parallel_Graph_Rewriting},
+  year      = {1993},
+  publisher = {Addison-Wesley}
+}
+
+@misc{parallel_fib_computation,
+  author = {{KC Sivaramakrishnan}},
+  title  = {Parallel Fibonacci Number Computation},
+  year   = {2022},
+  url    = {https://github.com/kayceesrk/ocaml5-tutorial#fibonacci-number},
+  note   = {[ogled 3.~5.~2023]}
+}
+
+@article{multicore_ocaml_article,
+  author  = {Sadiq Jaffer and Tom Kelly and Sudha Parimala and KC Sivaramakrishnan and Anil Madhavapeddy},
+  title   = {Parallelising your OCaml Code with Multicore OCaml},
+  year    = {2020},
+  journal = {Conference'17, July 2017, Washington, DC, USA},
+  url     = {https://kcsrk.info/papers/multicore-ocaml20.pdf},
+  urldate = {2023-08-02}
+}
+
+@article{ocaml_multicore_500,
+  author    = {Shubhendra Pal Singhal},
+  title     = {Graph500 from OCaml-Multicore Perspective},
+  year      = {2020},
+  journal   = {ResearchGate},
+  url       = {https://www.researchgate.net/publication/347965085_Graph500_from_OCaml-Multicore_Perspective},
+  urldate   = {2023-08-02}
+}
+
+@misc{ocaml_paralelisation_documentation,
+  author = {{OCaml 5 Authors}},
+  title  = {OCaml documentation - Parallel Programming},
+  year   = {2022},
+  url    = {https://v2.ocaml.org/manual/parallelism.html},
+  note   = {[ogled 2.~7.~2023]}
+}
+
+@misc{functional_swift_graph,
+  author = {{Jon Gilbert}},
+  title  = {GitHub - Functional Swift graph data structure},
+  year   = {2023},
+  url    = {https://github.com/gistya/Functional-Swift-Graph},
+  note   = {[ogled 2.~8.~2023]}
+}
+
+@misc{haskell_fgl,
+  author = {{Haskell Contributors}},
+  title  = {GitHub - haskell/fgl: A Functional Graph Library for Haskell},
+  year   = {2022},
+  url    = {https://github.com/haskell/fgl},
+  note   = {[ogled 1.~7.~2023]}
+}
+
+@article{linke_fundamental_2023,
+  title={Fundamental energy cost of finite-time parallelizable computing},
+  author={Linke, Heiner},
+  journal={Nature Communications},
+  url={https://www.nature.com/articles/s41467-023-36020-2},
+  year={2023},
+  abstract={Based on fundamental thermodynamics, traditional electronic computers, which operate serially, require more energy per computation the faster they operate. Here, the authors show that the energy cost per operation of a parallel computer can be kept very small.}
+}
+
+@misc{parallelisation_advantages_stack_discussion_2023,
+    title = {What is it about functional programming that makes it inherently adapted to parallel execution?},
+    author = {Various Authors},
+    year = {2023},
+    url = {https://softwareengineering.stackexchange.com/questions/293851/what-is-it-about-functional-programming-that-makes-it-inherently-adapted-to-para},
+    note = {[Ogled: 27.~7.~2023]}
+}
+
+@book{okasaki1996,
+  title     = {Purely Functional Data Structures},
+  author    = {Okasaki, Chris},
+  url       = {https://www.cs.cmu.edu/~rwh/students/okasaki.pdf},
+  year      = {1996},
+  publisher = {Cambridge University Press}
+}
+
+@misc{spaa2010,
+  author = {Nir Shavit},
+  title = {A Work-Efficient Parallel Breadth-First Search Algorithm},
+  year = {2010},
+  url = {https://web.mit.edu/neboat/www/presentations/spaa2010.pdf},
+  note = {[Ogled: 23.~7.~2023]}
+}
+
+
+
+
+
+
+# -------------------- PRIMERI CITATOV --------------------
 @book{glob,
   title     = {Analiza 1},
   year      = {2010},
