--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -146,111 +146,105 @@
 
 \section{Uvod}
 
-Grafovski algoritmi so dan danes ključni pri modeliranju širokega nabora vsakdanjih problemov: 
+Grafovski algoritmi so ključni pri modeliranju širokega nabora vsakdanjih problemov: 
 Igrajo pomembno vlogo pri modeliranju družbenih ter računalniških omrežjih, z njimi pa se prav tako razrešujejo 
 problemi na področjih računalniške komunikacije ter podatkovne analitike. Splošno, z grafi  modeliramo kakršne 
 koli odnose med danimi entitetami, vse od računanja razdalj med mesti, pa do računanje vodnega pretoka 
 od enega kraja do drugega.
 
-Ker kompleksnost grafov raste nelinearno z večanjem podatkov, z njihovim računanjem ter procesiranjem pogosto trčimo
-ob računsko prezahtevno oviro. Načinov za reševanje tega je več, pogosto pa je eden izmed možnih načinov pospešitve
+Kot kompleksnost grafov narašča, se povečujejo tudi zahteve za računsko
+moč pri njihovem obdelovanju. Čeprav so grafovski algoritmi v osnovi
+izračunljivi, lahko obdelava velikih ali zapletenih grafov postane izjemno
+zahtevna, tako v smislu časa izvajanja kot porabe pomnilnika.
+Načinov za reševanje tega problema je več, pogosto pa je eden izmed možnih načinov pospešitve
 programa paralelizacija, s čimer, kot bomo videli, bolje izkoristimo celotno računsko kapaciteto računalnika.
 Posledično je paralelizacija tovrstnih algoritmov v zadnjih letih postala tako zanimiva raziskovalna kot
-tudi aplikativna tema v računalništvu.  Tema se zdi vsekakor zanimiva, zato sem v svoji diplomski nalogi želel 
-vključiti elemente računalniške paralelizacije.
+tudi aplikativna tema v računalništvu.
 
 Funkcijski programski jeziki zagotavljajo matematične abstrakcije na višjem nivoju, kot so jih to sposobni navadni
 imperativni programski jeziki, kot so na primer \textit{Python}, \textit{C++} in \textit{Java}. 
 Ena izmed prednosti funkcijskih programskih jezikov je, da omogočajo deklarativno programiranje, 
-kar jih naredi bolj paralelizabilne (več o tem v \ref{def:deklarativni_programski_jeziki}). Tako me je zanimanje za matematične grafe, algoritme
-in funkcijske jezike pripeljalo v združevanje vseh teh tem hkrati: Osrednja tema moje diplomske naloge bo
-\textit{paralelizacija grafovskih algoritmov v funkcijskih programskih jezikih}.
+kar jih naredi bolj paralelizabilne.
 
-\begin{definicija}
-  \textbf{Funkcijsko programiranje} je računalniški koncept, znotraj katerega programe
-  pišemo z komponiranjem in apliciranjem matematičnih funkcij. 
-\end{definicija}
+\emph{Funkcijsko programiranje} je računalniški koncept, znotraj katerega programe
+pišemo z komponiranjem in apliciranjem matematičnih funkcij. 
 
-\begin{definicija} \label{def:deklarativni_programski_jeziki}
-  \textbf{Deklarativni programski jezik} je vrsta programskega jezika, kjer razvijalec opišie kaj naj program stori, 
-  namesto kako naj to stori. Programi so tipično strukturirani kot nizi deklaracij, ki določajo razmerja in omejitve
-  med različnimi entitetami znotraj problema. 
-  Nasprotno, \textbf{imperativni programski jezik} je vrsta programskega jezika, kjer programer navede zaporedje ukazov,
-  ki naj jih računalnik izvrši za rešitev problema.
-\end{definicija}
+\emph{Deklarativni programski jezik} je vrsta programskega jezika, kjer razvijalec opiše kaj naj program stori, 
+namesto kako naj to stori. Programi so tipično strukturirani kot nizi deklaracij, ki določajo razmerja in omejitve
+med različnimi entitetami znotraj problema. 
+Nasprotno, \textbf{imperativni programski jezik} je vrsta programskega jezika, kjer programer navede zaporedje ukazov,
+ki naj jih računalnik izvrši za rešitev problema.
 
 Vzporednost na nivoju procesorja je moč doseči na dva načina: 
 Tako, da je pomnilnik vsem računalniškim jedrom skupen, ali pa da je pomnilnik \textit{porazdeljen}. 
 V tej diplomski nalogi se bom osredotočal zgolj na sisteme s skupnim pomnilnikom ter porazdeljeno procesorsko močjo, 
 saj je tovrstne programe tipično manj zahtevno implementirati, kot pa tiste, ki delujejo na porazdeljenem pomnilniku.
 
+Vzporednost na nivoju procesorja je moč doseči na dva načina: 
+Tako, da je pomnilnik vsem računalniškim jedrom skupen, ali pa da je pomnilnik \textit{porazdeljen}. 
+V tej diplomski nalogi se bom osredotočal zgolj na sisteme s skupnim pomnilnikom ter porazdeljeno procesorsko močjo.
+V splošnem je programe na porazdeljenem pomnilniku težje implementirati, saj moramo še dodatno skrbeti za sinhronizacijo
+med procesi.
+
 Vse več funkcijskih programskih jezikov, kot so na primer Scala, F\# ter Haskell ima implementirane knjižnice
 in ogrodja za paralelizacijo grafovskih algoritmov:
 \begin{itemize}
-    \item knjižnica \textit{fgl} v Haskellu zagotavlja vzporedne algoritme za najkrajšo pot 
+    \item knjižnica \textit{fgl} v Haskellu \cite{haskell_fgl} zagotavlja vzporedne algoritme za najkrajšo pot 
     ter iskanje krepko povezanih komponent.
-    \item \textit{GraphX} v Scali ponuja implementacijo paralelnega Googlovega PageRank algoritma.
-    \item \textit{Alea.cuBase} nam ponuja elementarne paralelne algoritme v jeziku F\#.
+    \item \textit{GraphX} v Scali \cite{graphx} ponuja implementacijo paralelnega Googlovega PageRank algoritma.
 \end{itemize}
 
-Od konca lanskega leta pa imamo nov funkcijski programski jezik, ki je začel podpirati paralelno računanje - to je \textit{OCaml},
-ki se med drugim poučuje na naši fakulteti v sklopu računalniško-orientiranih predmetov. 
-Zato sem to priložnost izoristil, da svoje računalniške programe pišem v tem funkcijskem jeziku. 
+Z izdajo različice 5.0.0 leta 2022 je tudi OCaml dobil podporo za paralelno računanje. Zato sem to priložnost 
+izkoristil, da svoje računalniške programe pišem v tem funkcijskem jeziku. 
 V svoji diplomski naloge se bom tako spustil v tovrstne knjižnice v funkcijskih jezikih, ki že obstajajo, 
 pregledal novejše raziskave kar se tiče grafovskih algoritmov v imperativnih jezikih, 
 tovrstne ideje poskušal razumeti v kontekstu funkcijskih jezikov ter vse skupaj povezal v preprosto knjižnico v OCamlu.
 
-Ker OCaml šele na sveže podpira paralelizacijo, je posledično literature točno za ta jezik na to temo malo. 
-Edina OCamlova knjižnica, ki sem jo našel, da se ukvarja s paralelizacijo grafovskih algoritmov, je \cite{ocaml_multicore_500},
-ki pa se od moje razlikuje v tem, da je namenjena zgolj za paralelizacijo redkih grafov, prav tako pa je omenjena knjižnica napisana
-v prejšnji verziji OCamla, ki je paralelizacijo podpirala zgolj v omejenem obsegu. V glavnem mi ni preostalo drugega,
-kot da se sem se zanašal zgolj na OCamlovo dokumentacijo paralelizacije (\cite{ocaml_paralelisation_documentation}) ter
-na obstoječe knjižnice, razvite v drugih funkcijskih jezikih. Ob ustvarjanju grafa mi je kot osnovna ideja
-služila že napisana knjižnica v Swiftu (\cite{functional_swift_graph}), ob pisanju grafovskih algoritmov ter
-strukturiranju knjižnice pa grafovska knjižnica v Haskellu (\cite{haskell_fgl}).
+Ker je OCaml šele nedavno dobil podporo za paralelizacijo, je literatura na to temo omejeno.
+Med obstoječimi viri je knjižnica OCaml Multicore \cite{ocaml_multicore_500}, ki se osredotoča na paralelizacijo redkih grafov.
+To je narekovalo potrebo po uporabi OCamlove dokumentacije o paralelizaciji \cite{ocaml_paralelisation_documentation} ter
+raziskovanju knjižnic, razvitih v drugih funkcijskih jezikih. Za osnovo pri razvoju grafa je bila uporabljena knjižnica,
+razvita v Swiftu \cite{functional_swift_graph}, medtem ko so bile za implementacijo grafovskih algoritmov in strukturiranje
+knjižnice uporabljene tehnike iz knjižnice Haskell \cite{haskell_fgl}.
 
 \subsection{Kaj lahko od paralelnega programa pričakujemo?}
 
-Kaj si od paralelnega programa lahko obetamo v praksi? Za začetek bi si želeli vsaj, da je paralelni program hitrejši
-od sekvenčnega.  Intuitivno smiselno obstaja spodnja meja, ki nam pove, da če imamo na voljo $n$ procesorjev,
-bo naš program največ $n$-krat hitrejši od sekvenčnega programa.
-Dodatno pa je tu še dodatna računska obremenitev (ang. overhead), ki je potrebna za vzpostavitev vzporednega izvajanja
-programa (na primer inicializacija domene, definicija asinhronih nalog, \dots). 
-Posledično, če bomo naš paralelni program poganjali na enem samem jedru, bo 
-zagotovo počasnejši od sekvenčnega programa. Ugotovitve so ponazorjene na sliki
-\ref{fig:cilj-casovne-zahtevnosti-paralelizacije}.
+V praksi od paralelnega programa pričakujemo predvsem višjo hitrost izvajanja v primerjavi s sekvenčnim programom,
+kjer se naloge izvajajo zaporedno. Teoretično gledano, zakon Amdahl \cite{amdahl1967} določa omejitve pospešitve,
+ki jih lahko dosežemo z paralelizacijo. Čeprav teoretično program s $n$ procesorji lahko doseže do $n$-kratno hitrost,
+je treba upoštevati dodatne računske obremenitve, ki nastanejo pri vzpostavitvi paralelnega izvajanja, vključno s
+sinhronizacijo procesov, upravljanjem virov in koordinacijo med procesorskimi enotami. Tako lahko v nekaterih primerih,
+zlasti pri izvajanju na enem samem jedru, paralelni program postane počasnejši od svojega sekvenčnega ekvivalenta.
+Te ugotovitve ilustrira slika \ref{fig:cilj-casovne-zahtevnosti-paralelizacije}, pri čemer je pomembno tudi razmisliti o
+optimalnem razporejanju nalog in upravljanju virov za maksimalno izkoristek paralelizacije.
 
 \begin{figure}[h!]
   \centering
-  \caption{Kaj lahko pričakujemo od paralelnega programa?}
+  \caption{V našem programu si želimo, da bo čas izvedbe našega programa ujet med spodnjo in zgornjo mejo.}
   \includegraphics[width=13cm]{slike/cilj-casovne-zahtevnosti-paralelizacije.png}
   \label{fig:cilj-casovne-zahtevnosti-paralelizacije}
-  \smallskip
-  \footnotesize{V našem programu si želimo, da bo čas izvedbe našega programa ujet med spodnjo in zgornjo mejo.}
 \end{figure}
 
-\subsection{Prednosti paralelizacije v funkcijskih programskih jezikov pred paralelizacijo v imperativnih programskih jezikih}
+\subsection{Prednosti paralelizacije v funkcijskih programskih jezikih}
 
-\begin{definicija}
-  \textbf{Stranski učinki} so v programiranju kakršen koli odklon med čistimi matematičnimi funkcijami ter našim programom.
-\end{definicija}
+\emph{Stranski učinki} so v programiranju kakršen koli odklon med čistimi matematičnimi funkcijami ter našim programom.
 
 Zakaj koncepta funkcijskih programskih jezikov ter paralelizacije tako dobro sovpadata skupaj?
 V primerjavi z drugimi vrstami programskih jezikov, kot so na primer imperativni programski jeziki,
 so funkcijski programski jeziki bolj primerni za paralelizacijo iz več razlogov 
-(\cite{parallelisation_advantages_stack_discussion_2023}, \cite{functional_parallel_graph_rewriting}):
+\cite{parallelisation_advantages_stack_discussion_2023, functional_parallel_graph_rewriting}:
 
 \begin{itemize} \label{itemize:prednosti_funkcijskega_programiranja}
   \item \textbf{Nespremenljivost in odsotnost stranskih učinkov:} 
-    Kot že vemo iz predmeta Programiranje 1, so vse 
-    elementarne podatkovne strukture v funkcijskih programskih jezikih nespremenljive, kar za sabo prinese številne
+    Elementarne podatkovne strukture v funkcijskih programskih jezikih običajno nespremenljive, kar za sabo prinese številne
     prednosti, kot so na primer lažje razumevanje in odpravljanje napak, učinkovitost, modularnost 
     ter druge. Vse te lastnosti pa so še posebej pomembne v paralelnem kontekstu, kjer so naloge pogosto razdeljene med
     različne niti ali stroje. Če nam je zagotovljeno, da naša funkcija ne spreminja nobenega skupnega stanja, se
     različni procesi lahko izvajajo vzporedno, ne da bi se pri tem bilo treba ukvarjati s tem, da bi več procesov
-    naenkrat posegalo po istem prostoru v pomnilniku ali z drugimi sinhronizacijskimi težavami.
-    Sam sem imel v bistvu težave s pisanjem paralelnih programov v OCamlu v bistvu ravno takrat, ko sem
-    poskušal uporabljati spremenljive podatkovne strukture, kot sta na primer \texttt{Array} in \texttt{reference}.
+    naenkrat posegalo po istem prostoru v pomnilniku, ali z drugimi sinhronizacijskimi težavami.
+    Iz praktičnih izkušenj je razvidno, da uporaba spremenljivih podatkovnih struktur v OCamlu, kot sta na primer
+    \texttt{Array} in \texttt{reference}, lahko povzroči težave pri pisanju paralelnih programov, saj to zahteva
+    dodatno upravljanje sinhronizacije in stanja med procesi.
 
   \item \textbf{Lažje razumevanje in odpravljanje napak:} 
     Odsotnost stranskih učinkov prav tako olajša razumevanje kode in njeno odpravljanje napak, kar je še posebej
@@ -262,7 +256,7 @@ so funkcijski programski jeziki bolj primerni za paralelizacijo iz več razlogov
     kjer je naloge pogosto treba razbiti na manjše, neodvisne enote, ki se lahko izvajajo vzporedno.
 
   \item \textbf{Deklarativna narava funkcijskih jezikov:} 
-    Funkcijsko programiranje je oblika deklarativnega programiranja, kar pomeni, da opisujete, kaj želite doseči, 
+    Funkcijsko programiranje je oblika deklarativnega programiranja, kar pomeni, da opisujete, kaj želimo doseči, 
     ne da bi natančno opisali, kako to doseči. Ta visoka stopnja abstrakcije lahko olajša pisanje paralelne kode, 
     saj se lahko osredotočite na problem, ne da bi se zapletli v podrobnosti paralelnega izvajanja.
 \end{itemize}
@@ -282,59 +276,64 @@ Pri implementaciji različnih podatkovnih struktur, kot je na primer vrsta s pre
 V nadaljevanju dokumenta se bom najprej posvetil vprašanju, kako graf v funkcijskih jezikih sploh predstavimo, 
 nato pa se bom lotil algoritmov ter podatkovnih struktur na grafih.
 
-
 \section{Predstavitev grafa v funkcijskih jezikih}
 
 Če hočemo implementirati kakršen koli grafovski algoritem, je prvi korak, da graf sploh predstavimo v našem programu.
-V našem primeru je zaradi narave funkcijskih jezikov ter dodatnje težnje po nespremenljivosti zaradi paralelizacije
-smiselno, da se grafa lotimo z nespremenljivimi podatkovnimi strukturami.
+Kot smo utemeljili v razdelku \ref{itemize:prednosti_funkcijskega_programiranja}, se grafa lotimo z nespremenljivimi
+podatkovnimi strukturami.
 
-Definiral sem tri module: \texttt{Node} ter \texttt{UnweightedGraph} ter \texttt{WeightedGraph}, ki predstavljata 
-vozlišče ter graf, s čimer sem poskrbel, da je uporabniku uporaba teh podatkovnih struktur čim bolj transparentna, 
-obenem pa poskrbim, da metode, ki jih želim skriti, ostanejo privatne glede na modul v katerem so te metode zapisane.
-Za boljšo predstavo spodaj prilagam signaturo obeh modulov, ki predstavljata vozlišče ter graf. Zaradi obsežnosti metod
-ne bom prilagal tudi njihove implementacije, je pa le-ta na voljo na 
-\href{https://github.com/tjazerzen/parallelisation-of-graph-algorithms-in-functional-programming-languages/blob/master/playground/graph/graph.ml}{tem naslovu}.
-Vseeno pa tu predstavim glavno idejo zasnove modulov, ključno programsko kodo za razumevanje pa prilagam spodaj:
+Definiral sem tri module: \texttt{Node} ter \texttt{UnweightedGraph} ter \texttt{WeightedGraph}, ki predstavljajo
+vozlišče ter graf. V OCamlu modul predstavlja zbirko združenih podatkovnih tipov, funkcij ter drugih modulov v enoto.
+Vsak modul ima svojo signaturo, ki predstavlja javni del modula, ter implementacijo, ki predstavlja privatni del modula.
+Signatura modula je vmesnik, ki ga uporabnik vidi, implementacija pa je dejanska implementacija funkcij in tipov,
+deklariranih v signaturi. To omogoča skrivanje podrobnosti implementacije, ki jih uporabnik ne potrebuje. Abstraktni tipi, kot sta
+\texttt{t} in \texttt{elt} v signaturi modula \texttt{Node}, so tisti, katerih implementacijo skrijemo pred uporabnikom.
+Na primer, modul \texttt{Node} vključuje funkcije kot so \texttt{create}, \texttt{value} in \texttt{compare}, ter abstraktni
+podatkovni tip \texttt{t}, ki predstavlja vozlišče. Na podoben način sem definiral tudi modula \texttt{UnweightedGraph}
+ter \texttt{WeightedGraph}, ki predstavljata neutežen ter utežen graf.
+Celotna implementacija modulov je na voljo na \href{https://github.com/tjazerzen/parallelisation-of-graph-algorithms-in-functional-programming-languages/blob/master/playground/graph/graph.ml}{tem naslovu},
+tu pa predstavim glavno idejo zasnove modulov.
+
+\texttt{Node} je modul, ki predstavlja vozlišče grafa. 
+Vsako vozlišče ima svoj identifikator (\texttt{id}) ter celoštevilsko vrednost (\texttt{value}). Pri tem poskrbim, da uporabnik ne 
+operira direktno z identifikatorjem vozlišča, temveč preko funkcij, ki so na voljo v tem modulu.
+S tem izničimo možnost, da bi na primer uporabnik ustvaril dve vozlišči z istim ID-jem. 
+Kot na primer vidimo iz funkcijskega zapisa \texttt{val create : elt -> t}, je za ustvarjanje vozlišča potrebna
+zgolj vrednost vozlišča, s katero bomo to vozlišče ustvarili, njegov identifikator pa se bo samodejno povečal.
+Podobna logika velja za ostale metode znotraj vseh modulov: Metode sprejmejo ključne argumente, ki jih potrebujejo
+za svoje delovanje, vrne pa vrednost abstraktnega tipa v danemu modulu.
 
 \begin{lstlisting}
 module Node : sig
   type elt = int
   type t
+  val compare_ids : t -> t -> int
   val create : elt -> t
   val value : t -> elt
-  val compare_ids : t -> t -> int
   val compare : t -> t -> int
   val to_string : t -> string
 end = struct
   type elt = int
   type t = { id : int; value : elt }
+
+  let compare_ids node1 node2 = 
+    Stdlib.compare node1.id node2.id
   ...
 end
 
 module NodeSet = Set.Make (Node)
 module NodeMap = Map.Make (Node)
 
-module Graph : sig
-  type elt = int (* node values *)
-  type t (* graphs *)
+\end{lstlisting}
 
-  val empty : directed:bool -> t
-  val add_node : Node.t -> t -> t
-  val remove_node : Node.t -> t -> t
-  val add_edge : Node.t -> Node.t -> t -> t
-  val remove_edge : Node.t -> Node.t -> t -> t
-  val nodes : t -> Node.t list
-  val edges : t -> (Node.t * Node.t) list
-  val to_string : t -> string
-  val neighbours : Node.t -> t -> Node.t list
-end = struct
-  type t = {
-    edges : NodeSet.t NodeMap.t;
-    directed : bool;
-  }
-  ...
-end
+\texttt{UnweightedGraph} je modul, ki predstavlja neutežen graf. 
+Tu sem uporabil OCamlov modul Map (\url{https://ocaml.org/docs/map}) s vozlišči kot ključi ter množicami sosednjih vozlišč
+kot vrednostmi. Tako lahko na primer dostopamo do sosedov vozlišča $v$ z uporabo funkcije \texttt{NodeMap.find v graph.edges}.
+Poleg tega sem dodal metode, ki bi si jih za graf tipično želeli: Dodajanje ter odvzem
+vozlišč in povezav, pridobivanje seznama vseh vozlišč ter povezav, pridobivanje seznama sosedov danega vozlišča
+ter druge.
+
+\begin{lstlisting}
 
 module UnweightedGraph : sig
   type elt = int (* node values *)
@@ -360,25 +359,6 @@ end = struct
 end
 
 \end{lstlisting}
-
-\begin{itemize}
-  \item \texttt{Node} je modul, ki predstavlja vozlišče grafa. 
-    Vsako vozlišče ima svoj identifikator (\texttt{id}) ter vrednost (\texttt{value}). Pri tem poskrbim, da uporabnik ne 
-    operira direktno z identifikatorjem vozlišča, temveč preko funkcij, ki so na voljo v tem modulu.
-    S tem zmanjšamo možnost, da bi na primer uporabnik ustvaril dve vozlišči z istim ID-jem. 
-    Kot vidimo iz funkcijskega zapisa \texttt{val create : elt -> t}, je za ustvarjanje vozlišča potrebna zgolj vrednost,
-    s katero bomo to vozlišče ustvarili, njegov identifikator pa se bo samodejno povečal. Podobna logika velja za ostale
-    metode znotraj vseh modulov: Metode sprejmejo ključne argumente, ki jih potrebujejo za svoje delovanje,
-    vrne pa se dejanski objekt danega modula.
-  \item \texttt{UnweightedGraph} je modul, ki predstavlja neutežen graf. 
-    Namesto klasične (spremenljive) matrike sosednjosti kot bi jih na primer v \textit{Pythonu}, sem tu uporabil
-    OCamlove Map-e (\url{https://ocaml.org/docs/map}), ki kot vrednost hranijo vozlišča sama, kot ključe pa množico
-    sosednjih vozlišč. 
-    Poleg tega sem dodal metode, ki bi si jih tipično za graf želeli: Dodajanje ter odvzem
-    vozlišč in povezav, pridobivanje seznama vseh vozlišč ter povezav, pridobivanje seznama sosedov danega vozlišča
-    ter druge.    
-
-\end{itemize}
 
 S podobnimi metodami definiram tudi modul \texttt{WeightedGraph}, le da je njegov zapisni
 tip enak
@@ -410,39 +390,32 @@ ki nam omogoča paralelizacijo na nivoju procesorja. Ponuja nam razne abstrakcij
 in sočasnih programov. Zgrajena je na t.i. domenah (ang. domains). To so lahke niti, vgrajene v OCaml.
 S prihodom OCamlove različice 5.0.0 je \texttt{Domainslib} postal tudi del standardne knjižnice OCaml.
 
-\begin{definicija}
-  V paralelnem računanju je \textbf{domena} neodvisna računska enota, ki lahko sočasno dela z drugimi domenami.
-  Dana domena predstavlja od drugih domen ločen izvedbeni kontekst, ki lahko vzporedno izvaja navodila in izračune.
-  V kontektu paralelnega računalništva se izraz \textbf{število domen} nanaša na število vzporednih izvršilnih enot,
-  ki so trenutno na voljo za izvajanje izračunov.
-\end{definicija}
-
 Tukaj povzamem glavne koncepte Domainsliba, ki jih bom uporabil v svoji diplomski nalogi:
 
-\begin{enumerate} \label{itemize:domainslib}
-  \item Domene (ang. domains) so niti, ki nam zagotavljajo sočasnost v OCaml-u. 
+\begin{itemize} \label{itemize:domainslib}
+  \item \emph{Domene} (ang. domains) so niti, ki nam zagotavljajo sočasnost v OCaml-u. 
         Po svoji zasnovi so visokonivojske ter imajo nizke stroške dodatne računske obremenitve, kar
         omogoča ustvarjanje velikega števila sočasnih nalog. Domene so definirane znotraj t.i. bazena nalog
         (angl. task pool), znotraj katerega specificiramo število domen, ki jih želimo ustvariti. Nov bazen
         nalog ustvarimo z ukazom ~\texttt{Domainslib.Task.setup\_pool}.
-  \item Paralelne naloge (ang. parallel tasks): Knjižnica nam ponuja preproste funkcije za ustvarjanje in upravljanje
+  \item \emph{Paralelne naloge} (ang. parallel tasks): Knjižnica nam ponuja preproste funkcije za ustvarjanje in upravljanje
         z vzporednimi nalogami. Naloge so delovne enote, ki se lahko izvajajo hkrati na različnih domenah.
         Ustvarijo se s funkcijo ~\texttt{Domainslib.Task.async}, na njihovo dokončanje pa se počaka z uporabo
         ~\texttt{Domainslib.Task.await}.
-  \item Zbirke opravil (ang. task collections): Knjižnica nam ponuja zbirke opravil, ki so podobne paralelnim nalogam, 
-        le da lahko v njih shranimo več nalog hkrati. Zbirke opravil so lahko uporabne, kadar želimo ustvariti več nalog hkrati, 
+  \item \emph{Zbirke opravil} (ang. task collections): Knjižnica nam ponuja zbirke opravil, ki so podobne paralelnim nalogam, 
+        le da lahko v njih shranimo več nalog hkrati. Zbirke opravil so uporabne, kadar želimo ustvariti več nalog hkrati,
         vendar pa ne želimo ustvariti toliko domen, kot je nalog.
-  \item Vzorci vzporednega računanja (ang. parallel computation patterns), ki so pogosto uporabni pri vzporednem
-        programiranju. Na primer, z ukazom ~\texttt{Domainslib.Parallel.For} pa vporedno poženemo for zanko.
+  \item \emph{Vzorci vzporednega računanja} (ang. parallel computation patterns), ki so pogosto uporabni pri vzporednem
+        programiranju. Na primer, z ukazom \linebreak \texttt{Domainslib.Parallel.For} vzporedno poženemo zanko \texttt{for}.
         Vse to nam precej olajša delo, če lahko večji kos računalniške naloge razdelimo na manjše kose, ki jih lahko
         izvajamo vzporedno že preko vgrajenih funkcij.
-  \item Sinhronizacijski mehanizmi (ang. synchronization primitives): Knjižnica nam ponuja sinhronizacijske mehanizme,
+  \item \emph{Sinhronizacijski mehanizmi} (ang. synchronization primitives): Knjižnica nam ponuja sinhronizacijske mehanizme,
         ki nam omogočajo sinhronizacijo med domenami. Za to se uporablja modul ~\texttt{Atomic}. Obratno lahko definiramo
         mehanizme za vzajemno izključitev podatkovnih tokov (ang. mutex), ki nam omogočajo, da se določen kos kode
         izvaja samo na eni domeni hkrati. Za to se uporablja modul ~\texttt{Mutex}.
-  \item Izravnavanje obremenitve (ang. load balancing): Domainslib nam ponuja orodja za izravnavanje obremenitve, 
+  \item \emph{Izravnavanje obremenitve} (ang. load balancing): Domainslib nam ponuja orodja za izravnavanje obremenitve, 
         ki nam omogočajo, da se obremenitev med domenami porazdeli čim bolj enakomerno.
-\end{enumerate}
+\end{itemize}
 
 Na splošno knjižnica Domainslib ponastavlja postopek pisanja vzporednih in sočasnih programov v OCamlu. 
 Zagotavlja nam visokonivojski (ang. high-level) vmesnik za upravljanje nalog, usklajevanje sinhronizacije in
@@ -455,7 +428,7 @@ knjižnice Domainslib na GitHub-u na spletnem naslovu \url{https://github.com/oc
 
 \subsection{Uvodni primer: Računanje Fibonaccijevih števil}
 
-Čeprav ne gre za grafovski algoritem, se mi je vseeno zdelo zelo poučno, da najprej predstavim osnovne koncepte
+Čeprav ne gre za grafovski algoritem, je vseeno poučno, da najprej predstavimo osnovne koncepte
 paralelizacije na kar se da preprostem primeru. Izbral sem si paralelno računanje Fibonaccijevih števil
 (na način, ki terja časovno zahtevnost $O(2^n)$, kot je razvidno iz slike \ref{fig:fib-graph}).
 Osnovno idejo problema sem povzel po \cite{parallel_fib_computation} in \cite{multicore_ocaml_article} ter jo prilagodil
@@ -475,31 +448,40 @@ Preprosto funkcijo, ki računa Fibonaccijevo število, lahko zapišemo na zelo p
   \centering
   \begin{tikzpicture}[node distance=2cm]
 
+    % level 0
     \node (n0) at (0,0) {$n$};
+
+    % level 1
     \node (n1) at (-2,-2) {$n-1$};
     \node (n2) at (2,-2) {$n-2$};
+
+    % level 2
     \node (n3) at (-4,-4) {$n-2$};
-    \node (n4) at (0,-4) {$n-3$};
-    \node (n5) at (4,-4) {$n-3$};
-    \node (n6) at (-5.5,-6) {$n-4$};
-    \node (n7) at (-3,-6) {$n-5$};
-    \node (n8) at (-1,-6) {$n-4$};
-    \node (n9) at (0,-6) {...};
+    \node (n4) at (-1.5,-4) {$n-3$};
+    \node (n5) at (1.5,-4) {$n-3$};
+    \node (n6) at (4,-4) {$n-4$};
+
+    % level 3
+    \node (n7) at (-5.5,-6) {$n-3$};
+    \node (n8) at (-3,-6) {$n-4$};
+    \node (n9) at (-1,-6) {$n-4$};
+    \node (n10) at (0,-6) {...};
 
     \draw [->] (n0) -- (n1);
     \draw [->] (n0) -- (n2);
     \draw [->] (n1) -- (n3);
     \draw [->] (n1) -- (n4);
-    \draw [->] (n2) -- (n4);
     \draw [->] (n2) -- (n5);
-    \draw [->] (n3) -- (n6);
+    \draw [->] (n2) -- (n6);
     \draw [->] (n3) -- (n7);
-    \draw [->] (n4) -- (n8);
+    \draw [->] (n3) -- (n8);
     \draw [->] (n4) -- (n9);
+    \draw [->] (n4) -- (n10);
 
   \end{tikzpicture}
   \caption{Ker na vsakem koraku rekurzivno kličemo problema velikosti $n-1$ in $n-2$, se naša rekurzija razveja
-  kot skoraj polno dvojiško drevo. Zato je časovna zahtevnost našega algoritma $O(2^n)$.}
+  kot skoraj polno dvojiško drevo. Zato je časovna zahtevnost našega algoritma eksponentna (natančna zgornja meja je 
+  $O((\frac{1 + \sqrt{5}}{2})^n)$).}
   \label{fig:fib-graph}
 \end{figure}
 
