Add new references to literature.bib

--- a/diploma/literatura.bib
+++ b/diploma/literatura.bib
@@ -91,6 +91,23 @@
   note = {[Ogled: 23.~7.~2023]}
 }
 
+@misc{graphx,
+  author       = {Apache Spark},
+  title        = {GraphX},
+  year         = {2022},
+  url          = {https://spark.apache.org/graphx/},
+  note         = {[ogled 26.~12.~2023]}
+}
+
+@inproceedings{amdahl1967,
+  author = {Gene Amdahl},
+  title = {Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities},
+  booktitle = {Proceedings of the AFIPS Spring Joint Computer Conference},
+  year = {1967},
+  organization = {American Federation of Information Processing Societies}
+}
+
+
 
 
 
